--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 <body class="parrafo">
 
-  <section class="home">
+  <div class="Header">
     <header class="container py-2">
-      <nav class="navbar navbar-dark navbar-expand-lg">
+      <nav class="navbar navbar-light navbar-expand-lg">
         <a href="./index.html" class="navbar-brand logo">
           <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="mainMenu">
+        <div class="collapse navbar-light navbar-collapse" id="mainMenu">
           <ul class="navbar-nav ml-auto menu">
             <li class="nav-item">
               <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
@@ -35,203 +35,48 @@
         </div>
       </nav>
     </header>
-  </section>
+  </div>
 
-  <section class="banner">   
-      <article class="container_text">
-        <h1>Bievenido a este aventura</h1>
-        <p>LOREM IMPIUS</p>
+
+
+  <section class="banner">
+   <img class="img-fluid" src="./img/banner001.jpg" alt="">
+    <div class="container">
+      <article class="text-left text-white text-bold m-5">
+        <h1 class="col-8 ">Bienvenido a esta aventura espacial</h1>
+        <a class="px-4 py-3 text-white d-inline">Despeguemos</a>
       </article>
     </div>
   </section>
 
-  <section>
-    <h3 class="text-center">Sobre SpaceROSE</h3>
-    <div class="container d-flex justify-content-center">
-      <div class="row">        
-        <div class="row d-flex align-items-center">
-          <article class="col-6">
-            <video autoplay loop class="embed-responsive embed-responsive-16by9 shadow p-3 mb-5 bg-body rounded"
-              src="./Video/logo_spacerose.mp4" width="500" height="300"></video>
-          </article>
-          <div class="col-6 text-right">
-            <article class="text-justify ">
-              <p> SpaceRose es una historia ambientada en los años 60, centrada en la llegada del hombre a la luna
-                en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
-                los cálculos que hicieron posible dicho suceso.</p>
-            </article>
+  <section class="about">
+    <div class="container d-flex justify-content-center  align-items-center">
+      <article class="col-lg-6 col-md-12 col-sm-12 text-justify">
+        <h1 class="text-bold">SpaceRose</h1>
+        <p>SpaceRose es una historia ambientada en los años 60, centrada en la llegada del hombre a la luna
+          en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
+          los cálculos que hicieron posible dicho suceso.
+        </p>
+      </article>
 
-            <!-- Button trigger modal -->
-            <a type="submit" class="btn btn_login text-white parrafo" href="./lecturacomic.html">
-              Leer comic
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+      <article class="col-lg-6 col-md-12 col-sm-12">
+        <video autoplay loop class="embed-responsive embed-responsive-16by9 shadow p-3 mb-5 bg-body rounded"
+          src="./Video/logo_spacerose.mp4" width="500" height="300"></video>
+      </article>
 
-  <section class="personajes">
-    <h3 class="text-center">Personajes</h3>
-    <div class="container">
-      <div class="row">
-        <div class="row text-center d-flex justify-content-center">
-
-          <article class="m-5">
-            <img class="img_personajes img-fluid" src="./Img/Katerine.png" alt="">
-            <h5 class="text-bold">Katerine Johnson</h5>
-            <p>Matematica</p>
-          </article>
-
-          <article class="m-5">
-            <img class="img_personajes img-fluid" src="./Img/Kranz.png" alt="">
-            <h5 class="text-bold">Eugene Kranz</h5>
-            <p>Director vuelo</p>
-          </article>
-
-          <article class="m-5">
-            <img class="img_personajes img-fluid" src="./Img/neils.png" alt="">
-            <h5 class="text-bold">Neil Armstrong</h5>
-            <p>Astronauta</p>
-          </article>
-
-          <article class="m-5">
-            <img class="img_personajes img-fluid" src="./Img/aldrin.png" alt="">
-            <h5 class="text-bold">Buzz Aldrin</h5>
-            <p>Ingeniero/Astronauta</p>
-          </article>
-
-          <article class="m-5">
-            <img class="img_personajes img-fluid" src="./Img/collin.png" alt="">
-            <h5 class="text-bold">Michael Collins</h5>
-            <p>Astronauta</p>
-          </article>
-
-          <article class="m-5">
-            <img class="img_personajes img-fluid" src="./Img/extra masculino.png" alt="">
-            <h5 class="text-bold">Compañero</h5>
-            <p>Extra</p>
-          </article>
-
-        </div>
-      </div>
     </div>
   </section>
 
 
-  <section>
-    <div class="container ">
-      <h3 class="text-center">Galeria</h3>
-      <div class="row gallery d-flex justify-content-center">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 6-1.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 6-3.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 9-1.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/escena 9-9.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 8-1.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 9-4.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 6-2.jpg" alt="">
-        <img class="shadow p-3 mb-5 bg-body rounded" src="./Img/slider gallery/Escena 9-4.jpg" alt="">
-      </div>
-    </div>
-  </section>
-
-
-  <section>
-    <h3 class="text-bold">Equipo de trabajo</h3>
-    <div class="container bg-white">
-      <div class="row text-center">
-
-        <div class="col-lg-4 pb-5">
-          <img src="./Img/Estefa_photo.png" class="img_personajes img-fluid mb-4" alt="Estefa_photo">
-          <h4 class="text-bold">Estefanía Marín</h4>
-          <p class="parrafo">"Estudiante SENA"</p>
-        </div>
-
-        <div class="col-lg-4  pb-5">
-          <img src="./Img/Camilo_photo.png" class="img_personajes img-fluid mb-4" alt="camilo_photo">
-          <h4 class="text-bold">Juan C. Gutierrez</h4>
-          <p class="parrafo">"Estudiante SENA"</p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="./Img/Sharon_photo.png" class="img_personajes img-fluid mb-4" alt="sharon_photo">
-          <h4 class="text-bold">Sharon Osorno</h4>
-          <p class="parrafo">"Estudiante SENA"</p>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-
-  <button type="button" class=" border-0 iconContact" data-toggle="modal" data-target="#contact">
-    <i role="button" class="fas fa-headset text-white"></i>
-  </button>
-
-  <!-- Modal -->
-  <div class="modal fade" id="contact" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel"></h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form id="contactForm" class="row justify-content-center align-items-center">
-            <div class="col-12 btn-contact py-4 mb-3">
-              <div class=" justify-content-center text-center text-white">
-                <h4 class="text-bold">¿Podemos ayudarte en algo?</h4>
-                <p class="subtitle">Con gusto te asesoramos</p>
-              </div>
-            </div>
-            <div class="col-12">
-              <div class="form-group ">
-                <label for="Name" class="parrafo">Nombre y apellidos</label>
-                <input required type="text" class="form-control parrafo" placeholder="">
-              </div>
-              <div class="form-group ">
-                <label for="Email" class="parrafo">Email</label>
-                <input required type="email" class="form-control parrafo" placeholder="">
-              </div>
-              <div class="form-group ">
-                <label for="Coment" class="parrafo">Comentario</label>
-                <textarea type="text" class="form-control parrafo" cols="0" rows="0"
-                  placeholder="Escribe tu comentario..."></textarea>
-              </div>
-              <div class="form-group text-center">
-                <div class="form-check">
-                  <input required class="form-check-input" type="checkbox" id="gridCheck">
-                  <label class="form-check-label parrafo" for="gridCheck">
-                    Acepto la <a href="#" class="privacidad text-decoration-none text-bold ">politica de privacidad</a>
-                  </label>
-                </div>
-                <button type="submit" class="btn btn-contact text-white parrafo mt-3">Enviar</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <section class="footer">
+  <div class="footer">
     <div class="container">
       <footer class="row p-5 justify-content-around align-items-center">
-        
         <div class>
           <span class="text-white text-center">&copy;2020<b> SpaceRose</b></span>
         </div>
-
-        <!-- <div>
-          <a href="https://es-la.facebook.com"><i class="fab fa-facebook-f text-white "></i></a>
-          <a href="#"><i class="fab fa-youtube text-white"></i></a>
-        </div> -->
       </footer>
     </div>
-  </section>
+  </div>
 
 
 
